fixed header stretch

--- a/app/blocks/header/header.sass
+++ b/app/blocks/header/header.sass
@@ -13,7 +13,7 @@
   &__stretch
     width: 450px
     display: flex
-    align-content: center
+    align-items: center
     justify-content: flex-end
     &__messages
       background-color: #ff332e
